--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:description" content="Connecting nations through the power of prayer. Submit requests, join live prayer, and give." />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
+    <link rel="icon" type="image/png" href="/ICON ALONE 1.png" />
   </head>
   <body>
     <div id="root"></div>
