--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prayer Realm — Raising Global Altars of Prayer</title>
-    <meta name="description" content="Prayer Realm is an international prayer ministry connecting nations through the power of prayer. Submit prayer requests, join live sessions, and be part of a global prayer movement." />
-    <meta name="author" content="Prayer Realm" />
-    <meta property="og:title" content="Prayer Realm — Raising Global Altars of Prayer" />
-    <meta property="og:description" content="Connecting nations through the power of prayer. Submit requests, join live prayer, and give." />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <link rel="icon" type="image/png" href="/ICON ALONE 1.png" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Prayer Realm — Raising Global Altars of Prayer</title>
+  <meta name="description"
+    content="Prayer Realm is an international prayer ministry connecting nations through the power of prayer. Submit prayer requests, join live sessions, and be part of a global prayer movement." />
+  <meta name="author" content="Prayer Realm" />
+  <meta property="og:title" content="Prayer Realm — Raising Global Altars of Prayer" />
+  <meta property="og:description"
+    content="Connecting nations through the power of prayer. Submit requests, join live prayer, and give." />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="icon" type="image/png" href="/ICON ALONE 1.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
