--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" href="/ICON ALONE 1.png" />
+  <script id="luma-checkout" src="https://embed.lu.ma/checkout-button.js"></script>
 </head>
 
 <body>
